# VoteEnsembleCPP

./: .gitignore  CMakeLists.txt  README.md
include/: BaseLearner.hpp  LinearProgramLearner.hpp  LinearRegressionLearner.hpp  MoVE.hpp  ROVE.hpp  VoteEnsembleRunner.hpp  _BaseVE.hpp  _CachedEvaluator.hpp  _SubsampleResultIO.hpp  types.hpp
src/: LinearProgramLearner.cpp  LinearRegressionLearner.cpp  MoVE.cpp  ROVE.cpp  VoteEnsembleRunner.cpp  _BaseVE.cpp  _CachedEvaluator.cpp  _SubsampleResultIO.cpp  main.cpp  types.cpp
